# process-design-plugin

./: .gitignore  README.md  build.sh
.claude-plugin/: marketplace.json  plugin.json
mcp/birdclaw-mcp/: README.md  pyproject.toml  server.py
meta-spec/: handoff-prompt.md  process-design.flowchart.mmd  process-design.process-spec.md
plugins/process-design/.claude-plugin/: plugin.json
plugins/process-design/skills/birdclaw/: SKILL.md
plugins/process-design/skills/dmaic-analyze/: SKILL.md
plugins/process-design/skills/dmaic-control/: SKILL.md
skills/dmaic/: SKILL.md
skills/dmaic-analyze/: SKILL.md
skills/dmaic-improvement-workspace/iteration-1/: gap-analysis.md  session-notes.md
skills/dmaic-measure/: SKILL.md
skills/dmaic/references/: dmaic-reference.md  spec-template.md
skills/dmaic/scripts/: dmaic.py
skills/process-design/: SKILL.md
skills/process-design-workspace/iteration-1/: benchmark.json  benchmark.md  review.html
skills/process-design-workspace/iteration-2/: review.html
skills/process-design/evals/: evals.json
skills/process-design/references/: elon-algorithm.md  metrics-principles.md  spec-principles.md  test-writing.md
skills/process-design/scripts/: parse_mermaid.py  render_handoff.py  verify_spec.py
skills/process-design/templates/: process-spec-template.md
workspaces/dmaic-improvement-workspace/iteration-1/: build-handoff.md  dmaic-orchestrator.process-spec.md
workspaces/process-design-workspace/iteration-1/: diagrams.html
workspaces/process-design-workspace/iteration-2/: benchmark.json
(+76 files in other folders)
